import("//build/ohos.gni")

config("libpcap_config") {
    visibility = [":*"]
    include_dirs = [
        ".",
        "./src/pcap/bpf.h",
        "./src/pcap/can_socketcan.h",
        "./src/pcap/compiler-tests.h",
        "./src/pcap/dlt.h",
        "./src/pcap/funcattrs.h",
        "./src/pcap/ipnet.h",
        "./src/pcap/namedb.h",
        "./src/pcap/nflog.h",
        "./src/pcap/pcap.h",
        "./src/pcap/pcap-inttypes.h",
        "./src/pcap/sll.h",
        "./src/pcap/socket.h",
        "./src/pcap/usb.h",
    ]
}

config("libpcap_cflags_config") {
     cflags = [
        # "-O3",
        # "-DNDEBUG",
        # "-fPIC",
        # "-std=gnu99",
        # "-fvisibility=hidden",
        "-Wno-implicit-fallthrough",
        "-Wno-int-conversion",
    ]
}

ohos_shared_library("libpcap") {
    sources = [
        "./src/bpf_dump.c",
        "./src/bpf_filter.c",
        "./src/bpf_image.c",
        "./src/etherent.c",
        "./src/fad-getad.c",
        "./src/fmtutils.c",
        "./src/gencode.c",
        "./src/build/grammar.c",
        "./src/nametoaddr.c",
        "./src/optimize.c",
        "./src/pcap-common.c",
        "./src/pcap.c",
        "./src/savefile.c",
        "./src/build/scanner.c",
        "./src/sf-pcap.c",
        "./src/sf-pcapng.c",
        "./src/pcap-null.c",
    ]

    public_configs = [":libpcap_config"]
    configs = [":libpcap_cflags_config"]

    defines = [
        "HAVE_CONFIG_H",
        "BUILDING_PCAP",
        "pcap_EXPORTS",
    ]
}
